Module structure conformed to

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,19 @@
 *.exe
 *.out
 *.app
+examples/mqtt_crouton_esp8266/mqtt_crouton_esp8266.vcxproj.filters
+examples/mqtt_crouton_esp8266/mqtt_crouton_esp8266.vcxproj
+examples/mqtt_crouton_esp8266/__vm/.mqtt_crouton_esp8266.vsarduino.h
+examples/mqtt_crouton_esp8266/Release/mqtt_crouton_esp8266.ino.elf
+examples/mqtt_crouton_esp8266/Release/mqtt_crouton_esp8266.ino.bin
+examples/mqtt_crouton_esp8266/Release/mqtt_crouton_esp8266.elf
+examples/mqtt_crouton_esp8266/Release/mqtt_crouton_esp8266.bin
+examples/mqtt_crouton_esp8266/Release/board.buildinfo
+examples/mqtt_crouton_esp8266/__vm/Upload.vmps.xml
+examples/mqtt_crouton_esp8266/__vm/Configuration.Release.vmps.xml
+examples/mqtt_crouton_esp8266/__vm/Compile.vmps.xml
+examples/attiny_ky019/attiny_ky019.vcxproj.filters
+examples/attiny_ky019/attiny_ky019.vcxproj
+examples/attiny_ky019/__vm/.attiny_ky019.vsarduino.h
+examples/attiny_ky019/.vs/attiny_ky019/v15/.suo
+.vscode/settings.json
